# pong--11

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.hpp.in
po/: CMakeLists.txt  fi.po  pong--11.pot
src/: CMakeLists.txt  ball.cpp  ball.hpp  config.hpp.in  direction.hpp  game.cpp  game.hpp  i18n.hpp  main.cpp  paddle.cpp  paddle.hpp  pong.exe.manifest  pong.exe.manifest.in  pong.rc  prng_user.cpp  prng_user.hpp  random.cpp  random.hpp  to_string_replacement.hpp  wchar_conversion.hpp
